--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "redis-logger-rpf",
-  "version": "0.2.8",
-  "description": "Experimental logger (debug, warn, info, error) into Redis.",
+  "version": "0.2.9",
+  "description": "Experimental logger (debug, warn, info, error) into Redis (planned).",
   "main": "index.js",
   "scripts": {
     "test": "./bin/test.sh"
